# kakao-tech-campus-step1

./: .gitignore  AGENTS.md
kakao_clone_coding_lecture/: .env.example  .gitignore  README.md  pyproject.toml
kakao_clone_coding_lecture/docs/: mentor_tool_coaching_guide.md  orientation.md  week01.md  week02.md  week03.md  week04.md  week05.md  week06.md
kakao_clone_coding_lecture/notebook/: 1주차_나나를_깨우다.ipynb  2주차_자연어를_구조화된_요청으로_만든다.ipynb  3주차_나나의_기록장을_만들다.ipynb  4주차_나나가_기억을_찾아오다.ipynb  5주차_카나가_지난대화를_불러오다.ipynb  6주차_카나메이트가_약속을_결정하다.ipynb
kakao_clone_coding_lecture/scripts/: setup_uv_env.sh
학습일지/: 학습일지 가이드.txt
학습일지/학습일지 목록/: week01_학습일지.md  week02_학습일지.md  week03_학습일지.md
