[project]
name = "kanamate-agentic-ai-course"
version = "0.1.0"
description = "Notebook-based KanaMate agentic AI course environment."
requires-python = ">=3.10,<3.11"
dependencies = [
    "python-dotenv==1.2.2",
    "langchain==1.2.6",
    "langgraph-prebuilt==1.0.8",
    "langchain-openai==1.1.7",
    "langchain-mcp-adapters==0.2.2",
    "mcp==1.27.2",
    "chromadb==1.5.8",
    "pydantic==2.12.5",
    "gradio==6.14.0",
    "jupyter==1.1.1",
    "ipykernel==7.1.0",
    "nbformat==5.10.4",
]

[tool.uv]
package = false
